Another attempt at fixing iframe scrollbars issue.

--- a/petition_world/css/main.css
+++ b/petition_world/css/main.css
@@ -160,6 +160,6 @@ form.cmxform {
   font-size: 0.8em;
 }
 
-#fc-opensocial-api {
-  display: none;
+#fc-opensocial-api, #fc-opensocial-api iframe, #fc-opensocial-api div {
+  display: none !important;
 }
